# GPUAcceleratedCFD_CUDA_Advection_Diffusion_Solver

./: .gitignore  CMakeLists.txt  README.md
benchmarkingTests/150/: test_2d_dirichlet.xml  test_2d_dirichlet_cuda.xml  test_2d_neumann.xml  test_2d_neumann_cuda.xml  test_2d_periodic.xml  test_2d_periodic_cuda.xml  test_3d_dirichlet.xml  test_3d_dirichlet_cuda.xml  test_3d_neumann.xml  test_3d_neumann_cuda.xml  test_3d_periodic.xml  test_3d_periodic_cuda.xml
benchmarkingTests/250/: test_2d_dirichlet.xml  test_2d_dirichlet_cuda.xml  test_2d_neumann.xml  test_2d_neumann_cuda.xml  test_2d_periodic.xml  test_2d_periodic_cuda.xml  test_3d_dirichlet.xml  test_3d_dirichlet_cuda.xml  test_3d_neumann.xml  test_3d_neumann_cuda.xml  test_3d_periodic.xml  test_3d_periodic_cuda.xml
benchmarkingTests/50/: test_2d_dirichlet.xml  test_2d_dirichlet_cuda.xml  test_2d_neumann.xml  test_2d_neumann_cuda.xml  test_2d_periodic.xml  test_2d_periodic_cuda.xml  test_3d_dirichlet.xml  test_3d_dirichlet_cuda.xml  test_3d_neumann.xml  test_3d_neumann_cuda.xml  test_3d_periodic.xml  test_3d_periodic_cuda.xml
include/: grid.h  io.h  parameters.h  solver.h  solver_cuda.h
results/: compileRes.py
results/runlogs/: parallel_cuda_dirichlet.txt  parallel_cuda_neumann.txt  parallel_cuda_periodic.txt  sequential_dirichlit.txt  sequential_neumann.txt  sequential_periodic.txt
src/: grid.c  io.c  main.c  main_cuda.cu  parameters.c  solver.c  solver_cuda.cu
